objects/CL_Contract_Document_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Attachment_ID__c</fullName>
        <label>Attachment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CL_Contract__c</fullName>
        <label>CL Contract</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Cl Contract Document Junction</relationshipLabel>
        <relationshipName>Cl_Contract_Document_Junction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Document_Category__c</fullName>
        <label>Document Category</label>
        <picklist>
            <picklistValues>
                <fullName>BORROWER STATEMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CL Contract Document Junction</label>
    <nameField>
        <displayFormat>CDJ-{0000000000}</displayFormat>
        <label>CL Contract Document Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cl Contract Document Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>